feat: タイトルを「KAMUI OS」に変更
- config.yaml、index.html、各種XMLファイル、及びページのHTMLファイルにおいて、タイトルを「SaaS Applications」から「KAMUI OS」に変更
- サイドバーのタイトルも全て「KAMUI OS」に統一

--- a/public/pages/prompts-repo/index.html
+++ b/public/pages/prompts-repo/index.html
@@ -3,7 +3,7 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>プロンプト置き場 - SaaS Applications</title>
+  <title>プロンプト置き場 - KAMUI OS</title>
   <meta name="description" content="">
   
   <link rel="stylesheet" href="/css/main.css">
@@ -77,7 +77,7 @@
 <body>
   <div class="sidebar" id="sidebar">
   <div class="sidebar-header">
-    <div class="sidebar-title">SaaS Applications</div>
+    <div class="sidebar-title">KAMUI OS</div>
     <div class="sidebar-subtitle" id="tocCount">目次</div>
   </div>
 
