--- a/public/pages/prompts-repo/index.html
+++ b/public/pages/prompts-repo/index.html
@@ -3,7 +3,7 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>エージェント - KAMUI OS</title>
+  <title>従業員 - KAMUI OS</title>
   <meta name="description" content="">
   
   <link rel="stylesheet" href="/css/main.css">
@@ -222,15 +222,15 @@
   
     
   
-  <script>window.SECTIONS = "[{\"category\":1,\"category_name\":\"ダッシュボード\",\"id\":\"saas-applications-overview\",\"title\":\"ダッシュボード\"},{\"category\":3,\"category_name\":\"メディアエディタ\",\"id\":\"saas-ai-portrait\",\"title\":\"AI Portrait Generator\"},{\"category\":3,\"category_name\":\"メディアエディタ\",\"id\":\"saas-storyboard\",\"title\":\"ビデオビューアー\"},{\"category\":3,\"category_name\":\"メディアエディタ\",\"id\":\"saas-storyboard-viewer\",\"title\":\"ストーリーボードビューアー\"},{\"category\":1,\"category_name\":\"アプリケーション\",\"id\":\"saas-ai-portrait\",\"title\":\"AI Portrait Generator\"},{\"category\":3,\"category_name\":\"事業構築\",\"id\":\"biz-finance\",\"title\":\"財務\"},{\"category\":3,\"category_name\":\"事業構築\",\"id\":\"biz-strategy\",\"title\":\"戦略\"},{\"category\":5,\"category_name\":\"エージェント\",\"id\":\"prompts-repo\",\"title\":\"エージェント\"},{\"category\":2,\"category_name\":\"要件定義・開発\",\"id\":\"requirements-document\",\"title\":\"要件定義書\"},{\"category\":4,\"category_name\":\"ビジネスツール\",\"id\":\"slide-generator\",\"title\":\"スライドエディタ\"},{\"category\":1,\"category_name\":\"アプリケーション\",\"id\":\"saas-storyboard-viewer\",\"title\":\"ストーリーボードビューアー\"},{\"category\":2,\"category_name\":\"要件定義・開発\",\"id\":\"ui-views\",\"title\":\"UIビュー一覧\"}]";</script>
+  <script>window.SECTIONS = "[{\"category\":1,\"category_name\":\"ダッシュボード\",\"id\":\"saas-applications-overview\",\"title\":\"ダッシュボード\"},{\"category\":3,\"category_name\":\"メディアエディタ\",\"id\":\"saas-ai-portrait\",\"title\":\"AI Portrait Generator\"},{\"category\":3,\"category_name\":\"メディアエディタ\",\"id\":\"saas-storyboard\",\"title\":\"ビデオビューアー\"},{\"category\":3,\"category_name\":\"メディアエディタ\",\"id\":\"saas-storyboard-viewer\",\"title\":\"ストーリーボードビューアー\"},{\"category\":1,\"category_name\":\"アプリケーション\",\"id\":\"saas-ai-portrait\",\"title\":\"AI Portrait Generator\"},{\"category\":3,\"category_name\":\"事業構築\",\"id\":\"biz-finance\",\"title\":\"財務\"},{\"category\":3,\"category_name\":\"事業構築\",\"id\":\"biz-strategy\",\"title\":\"戦略\"},{\"category\":5,\"category_name\":\"従業員\",\"id\":\"prompts-repo\",\"title\":\"従業員\"},{\"category\":2,\"category_name\":\"要件定義・開発\",\"id\":\"requirements-document\",\"title\":\"要件定義書\"},{\"category\":4,\"category_name\":\"ビジネスツール\",\"id\":\"slide-generator\",\"title\":\"スライドエディタ\"},{\"category\":1,\"category_name\":\"アプリケーション\",\"id\":\"saas-storyboard-viewer\",\"title\":\"ストーリーボードビューアー\"},{\"category\":2,\"category_name\":\"要件定義・開発\",\"id\":\"ui-views\",\"title\":\"UIビュー一覧\"}]";</script>
 
   
   
   
 
   
-  <section class="doc-section" id="prompts-repo" data-cat="5" data-cat-name="エージェント">
-    <h2>エージェント</h2>
+  <section class="doc-section" id="prompts-repo" data-cat="5" data-cat-name="従業員">
+    <h2>従業員</h2>
 
     
 
