feat: 採用担当の名前を「サラ」から「トム」に変更し、関連メディアを更新
- prompts-repo.yamlおよびindex.htmlで採用担当の名前を「トム」に変更
- 採用担当の動画を新しいものに更新し、視覚的な一貫性を向上
- hiring-agent.mdの役割説明を修正し、明確化

--- a/public/index.html
+++ b/public/index.html
@@ -4669,7 +4669,7 @@
           { title: 'SNSカード素材', status: 'todo' },
           { title: 'OG画像更新', status: 'todo' }
         ]},
-        { name: 'サラ', role: '採用担当', tasks: [
+        { name: 'トム', role: '採用担当', tasks: [
           { title: '求人担当の詳細仕様決定完了', status: 'done' },
           { title: 'KAMUI CODE 実装担当採用', status: 'todo' },
           { title: 'KAMUI 実装担当採用', status: 'todo' }
@@ -4754,8 +4754,8 @@
               '<span class="card-name">エミリー</span>';
       }
       if (/hiring-agent\.md$/.test(it.path||'')) {
-        img = '<video class="card-video" src="/videos/recruiter_card_video_square.mp4" poster="/images/agent_card.png" autoplay loop muted playsinline></video>'+
-              '<span class="card-name">サラ</span>';
+        img = '<video class="card-video" src="/videos/recruiter_1_video.mp4" poster="/images/agent_card.png" autoplay loop muted playsinline></video>'+
+              '<span class="card-name">トム</span>';
       }
       card.innerHTML = `<div class="card-title">${it.title}</div>${img}`;
       card.addEventListener('click', () => showDoc(it.id));
